manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "ravidemoaks-db6a"
    labels:
        app: "ravidemoaks-db6a"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: ravidemoaksa293-ravidemoaks-db6a.65fc0fb6c62948beb7b2.eastus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "ravidemoaks-db6a"
                servicePort: 8080
